@@ -1,3 +1,10 @@
+2009-07-13  Chris Morley
+
+	* src/formats/fingerprintformat.cpp: set initial nbits=0 (default)
+	and remove the setting of FP4 as the default fingerprint. 
+	(FastsearchFormat remained at FP2.) OBPlugin derived classes have
+	a built-in mechanism for setting defaults.
+	
 2009-07-08  Chris Morley
 
 	* src/transform.cpp(OBMol::ClassDescription) Change description of -p so that GUI 
